<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">小新</string>

    <string name="_00_00_00">00:00:00</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="forgot_your_password">忘记密码</string>
    <string name="go">登录</string>
    <string name="register_email">邮箱(忘记密码找回使用)</string>
    <string name="navigation_home">设备</string>
    <string name="navigation_music">音乐</string>
    <string name="navigation_video">视频</string>
    <string name="navigation_people">我的</string>

    <string name="et_cmd">输入指令或对话</string>
    <string name="bt_send">发送</string>
    <string name="add_device">添加设备</string>
    <string name="search_device">搜索设备</string>
    <string name="search_dialog_tv">搜索中．．．</string>
    <string name="setting_notify">消息中心</string>
    <string name="setting_set">设置</string>
    <string name="setting_about">关于</string>
    <string name="setting_exit">退出登录</string>
    <string name="setting_login">登录</string>
    <string name="setting_user_name">未设置</string>
    <string name="device_name">设备名称:</string>
    <string name="device_address">地址:</string>
    <string name="device_rssi">Rssi:</string>
    <string name="device_add_dialog">添加</string>
    <string name="device_cancel_dialog">取消</string>
    <string name="toast_already_register_device">该设备已经添加，请选择其他设备</string>
    <string name="unknown_service">无服务</string>
    <string name="unknown_characteristic">无特征值</string>
    <string name="ble_connect_loading">正在连接蓝牙设备　<xliff:g id="device">%1$s</xliff:g></string>
    <string name="ble_connect_send_msg">请输入指令</string>

    <string name="login_name_error">用户名不能为空</string>
    <string name="login_password_error">密码不能为空</string>
    <string name="login_name_password_verify_error">用户名或密码错误,验证失败</string>
    <string name="hello_blank_fragment">
        Hello
        blank
        fragment
    </string>


    <string name="unknown">未知</string>
    <!-- string preference-->
    <string name="setting_key_mobile_network_play">mobile_network_play</string>
    <string name="setting_key_mobile_network_download">mobile_network_download</string>
    <string name="setting_key_filter_size">filter_size</string>
    <string name="setting_key_filter_time">filter_time</string>
    <string name="splash_button_skip">跳过</string>
    <string name="copyright">Copyright © 2015&#045;<xliff:g id="YEAR">%1$d</xliff:g> SmartHome</string>
    <!--音乐-->
    <string name="fragment_music_tool_bar">听</string>
    <string name="fragment_video_tool_bar">看</string>
    <string name="local_music_bar">本地音乐</string>
    <string name="local_love_bar">喜欢</string>
    <string name="local_download_bar">下载</string>
    <string name="local_recent_bar">最近</string>
    <string name="music_online">乐库</string>
    <string name="music_list">列表</string>
    <string name="null_music">无音乐</string>
    <string name="null_artist">无</string>
    <string name="title_activity_local_music">本地音乐</string>
    <string name="list_footer_show_music_count">共<xliff:g id="song">%1$d</xliff:g>首歌曲</string>
    <string name="share">分享</string>
    <string name="share_music">我用%1$s分享了歌曲《%2$s》%3$s</string>
    <string name="tips">温馨提示</string>
    <string name="download_tips">当前处于移动网络，下载将消耗较多流量，是否继续下载？</string>
    <string name="download_tips_sure">继续下载</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="delete">删除</string>
    <string name="delete_dialog_title">删除歌曲</string>
    <string name="delete_music">确定删除 \"<xliff:g id="name">%1$s</xliff:g>\" ?</string>
    <string name="play_tips">当前处于移动网络，确定打开移动网络播放开关吗？</string>
    <string name="play_tips_sure">立即打开</string>
    <string name="downloading">正在下载．．．</string>
    <string name="download_fail">下载失败</string>
    <string name="unable_to_share">分享失败</string>
    <string name="play_time_start">00:00</string>
    <string name="online_loading">加载中．．．</string>
    <string name="hard_loading">努力加载中．．．</string>
    <string name="load_fail">加载失败，请检查网络后重试</string>
    <string name="online_song_list_music"><xliff:g id="music">%1$s</xliff:g> - <xliff:g id="artist">%2$s</xliff:g></string>
    <string name="play_mode_queue">顺序播放</string>
    <string name="play_mode_random">随机播放</string>
    <string name="play_mode_one_loop">单曲循环</string>
    <string name="online_multi_choice">多选</string>
    <string name="song_list_update_time"><xliff:g id="time">%1$s</xliff:g> 更新</string>
    <string name="song_list_detail">详情</string>

    <string name="music_more_download">下载</string>
    <string name="music_more_share">分享</string>
    <string name="music_more_add">添加</string>
    <string name="music_more_info">歌曲信息</string>
    <string name="music_more_ring">设为铃声</string>
    <string name="music_more_delete">删除</string>
    <string name="search_music">搜索</string>
    <string name="search_et_music_name">歌曲名\/歌手名</string>
    <string name="search_none">未搜索到</string>


    <string name="web_video_bd_ratio">BD高清</string>
    <string name="web_video_hd_ratio">HD高清</string>
    <string name="web_video_backup">备用线路</string>
    <string name="web_video_fast_cloud">高速在线云播</string>
    <string name="video_introduce">简介</string>
    <string name="video_list">剧集</string>
    <string name="video_item_area">地区: <xliff:g id="time">%1$s</xliff:g></string>
    <string name="video_item_year">年份: <xliff:g id="time">%1$s</xliff:g></string>
    <string name="video_item_type">分类: <xliff:g id="time">%1$s</xliff:g></string>
    <string name="related_recommend_bar_title">相关推荐</string>
    <string name="buffering">加载中，请稍后...</string>
</resources>
