<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/video_introduce"
        android:textSize="18sp"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/video_introduce_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_item_area"
            />
        <TextView
            android:id="@+id/video_introduce_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30"
            android:text="@string/video_item_year"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/video_introduce_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:text="@string/video_item_type"/>

    <TextView
        android:id="@+id/video_introduce_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginBottom="@dimen/margin_5"
        android:layout_marginStart="@dimen/margin_20"
        />

</LinearLayout>