<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_dialog_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_5"
            android:text="@string/add_device"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/gray"
            />

        <EditText
            android:id="@+id/search_dialog_add_device_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/device_name"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/search_dialog_add_device_cancel_bt"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/device_cancel_dialog"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/search_dialog_add_device_add_bt"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/device_add_dialog"
                android:textSize="20sp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>