<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_white">

    <LinearLayout
        android:id="@+id/music_bar_local"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:clickable="true"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_music_local"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:textColor="@color/selector_textview_music_bar_title"
            android:text="@string/local_music_bar"
            />
        <TextView
            android:id="@+id/music_local_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/selector_textview_music_bar_sumary"
            android:text="0"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/music_bar_love"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:clickable="true"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_music_love"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:textColor="@color/selector_textview_music_bar_title"
            android:text="@string/local_love_bar"
            />
        <TextView
            android:id="@+id/music_love_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/selector_textview_music_bar_sumary"
            android:text="0"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/music_bar_download"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:clickable="true"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_music_download"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:textColor="@color/selector_textview_music_bar_title"
            android:text="@string/local_download_bar"
            />
        <TextView
            android:id="@+id/music_download_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/selector_textview_music_bar_sumary"
            android:text="0"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/music_bar_recent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:clickable="true"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_music_recent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:textColor="@color/selector_textview_music_bar_title"
            android:text="@string/local_recent_bar"
            />
        <TextView
            android:id="@+id/music_recent_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/selector_textview_music_bar_sumary"
            android:text="0"/>
    </LinearLayout>
</LinearLayout>