<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_window_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/popup_queue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/margin_20"
            android:src="@drawable/online_music_play_mode_queue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            android:textColor="@color/selector_textview_oneline_music_mode"
            android:text="@string/play_mode_queue" />

        <ImageView
            android:id="@+id/popup_queue_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:visibility="invisible"
            android:src="@drawable/songlist_play_mode_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray"
        />
    <LinearLayout
        android:id="@+id/popup_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/margin_20"
            android:src="@drawable/online_music_play_mode_random" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            android:textColor="@color/selector_textview_oneline_music_mode"
            android:text="@string/play_mode_random" />

        <ImageView
            android:id="@+id/popup_random_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:visibility="invisible"
            android:src="@drawable/songlist_play_mode_right" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray"
        />
    <LinearLayout
        android:id="@+id/popup_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/margin_20"
            android:src="@drawable/online_music_play_mode_one" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            android:textColor="@color/selector_textview_oneline_music_mode"
            android:text="@string/play_mode_one_loop" />

        <ImageView
            android:id="@+id/popup_one_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:visibility="invisible"
            android:src="@drawable/songlist_play_mode_right" />
    </LinearLayout>

</LinearLayout>